# web3-sol-program

./: Anchor.toml  dumps.txt  instructions.md  package-lock.json  package.json
programs/web3-sol-program/: Cargo.toml
programs/web3-sol-program/src/: lib.rs
tests/: web3-sol-program.js
